<resources>
    <string name="app_name">Werwolf</string>

    <string name="ok">OK</string>

    <!-- - - - - - - - - - - - - - StartActivity - - - - - - - - - - - - - -->
    <string name="display_name">Anzeigename</string>
    <string name="join_lobby">Lobby beitreten</string>
    <string name="join">beitreten</string>
    <string name="create_lobby">Lobby erstellen</string>
    <string name="address">Adresse</string>
    <string name="port">Port</string>
    <string name="title_activity_wiki">WikiActivity</string>
    <string name="no_display_name_entered_title">Keinen Anzeigenamen eingegeben</string>
    <string name="no_display_name_entered_text">Bitte gib einen Anzeigenamen ein. Dies ist dein Name im Spiel.</string>
    <string name="bad_data_entered_title">Keine Adresse eingegeben</string>
    <string name="bad_data_entered_text">Bitte gib die Adresse und Port des Admins ein. Diese Daten werden auf dem Handy des Admins angezeigt.</string>

    <!-- - - - - - - - - - - - - - LobbyActivity - - - - - - - - - - - - - -->
    <string name="create_group_failed_title">Fehler</string>
    <string name="create_group_failed_text">Es gab ein Problem beim Erstellen der Lobby. Bitte überprüfe Deine WLAN-Einstellungen und versuche es erneut.</string>
    <string name="create_group_success">Die Lobby wurde erfolgreich erstellt.</string>
    <string name="adress_x">Adresse: %1$s</string>
    <string name="port_x">Port: %1$d</string>
    <string name="leave_lobby">Lobby verlassen</string>

    <!-- - - - - - - - - - - - - - WikiAcitvity - - - - - - - - - - - - - -->
    <string name="roles">Die Rollen</string>
    <string name="villager">Dorfbewohner</string>
    <string name="show">Info</string>
    <string name="werewolf">Werwolf</string>
    <string name="witch">Hexe</string>
    <string name="hunter">Jäger</string>
    <string name="oracle">Seher</string>

    <string name="villager_info">Dorfbewohner bilden die Basisrolle des Spiels. Sie verfügen über keine speziellen Fähigkeiten und schlafen die Nacht durch.
        Ihr Ziel ist, alle Werwölfe aus dem Dorf zu erhängen..</string>
    <string name="werewolf_info">Die Werwölfe sind die direkten Spielkontrahenten zu den Dorfbewohnern.
        Werwölfe wachen in der Nacht gemeinsam auf und dürfen sich ein Opfer unter den anderen Spielern suchen. Ihr Ziel ist, alle anderen zu töten..</string>
    <string name="witch_info">Die Hexe ist eine Spezialrolle. Sie erwacht in der Nacht, wenn sie dazu aufgefordert wird, und erfährt, welche Person von den Werwölfen als Opfer ausgewählt wurde.
        Sie besitzt einmalig über alle Nächte hinweg einen Heil- sowie einen Todestrank, den sie anwenden kann, wenn sie es möchte.
        Wenn sie stirbt, ohne dass sie die Tränke genutzt hat, verfallen diese.</string>
    <string name="hunter_info">Der Jäger ist eine Spezialrolle. Er schläft wie ein normaler Dorfbewohner die Nacht durch.
        Wenn er am Tag vom Dorf gehängt wird, darf er eine weitere Person mit in den Tod ziehen, wenn er das möchte.</string>
    <string name="oracle_info">Der Seher ist eine Spezialrolle. Er erwacht in der Nacht, wenn er dazu aufgefordert wird, und darf eine Person auswählen,
        deren Rolle(gut oder böse) er erfahren möchte.
        Sofern kein Gärtner im Spiel ist, der dem Seher irrtümlicherweise als Werwolf angezeigt wird, ist diese Information immer korrekt.</string>

    <string name="rules_concept">Werwolf ist ein Spiel, bei dem zwei Teams, Dorfbewohner und Werwölfe, gegeneinander spielen.
        Die Werwölfe haben sich unerkannt in das Dorf eingeschleust und bringen des Nachts Dorfbewohner um.
        Am Tag versucht die Dorfgemeinschaft den Übeltätern auf die Spur zu kommen. Gespielt wird in größeren Runden von min. 8 Spielern.
        Die von uns entwickelte App übernimmt die Verteilung der Rollen und führt im weiteren Verlauf des Spiels als Spielleiter durch die einzelnen Phasen. </string>

    <!-- - - - - - - - - - - - - - MenuFragment - - - - - - - - - - - - - -->
    <string name="rules">Regeln</string>
    <string name="classes">Rollen</string>
    <string name="settings">Einstellungen</string>

    <!-- - - - - - - - - - - - - - Network - - - - - - - - - - - - - -->
    <string name="service_stopped_title">Netzwerkproblem</string>
    <string name="service_stopped_text">Es gab Probleme mit der Verbindung. Fehlermeldung: \n%1$s</string>
    <string name="title_activity_regeln">RegelnActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="settings_players">Anzahl Spieler:</string>
    <string name="settings_werewolf">Werwölfe:</string>
    <string name="settings_role_info">Alle Sonderrollen sind gleichzeitig Dorfbewohner.</string>

    <!-- - - - - - - - - - - - - - Notification - - - - - - - - - - - - - -->
    <string name="notification_title">Spiel aktiv</string>
    <string name="notification_text">Du bist gerade in einem Werwolf-Spiel!</string>

</resources>
