<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_wiki"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.woodplantation.werwolf.WikiActivity"
    tools:showIn="@layout/activity_wiki">

    <LinearLayout
        android:id="@+id/base_layout_wiki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <com.woodplantation.werwolf.graphics.MyTextView
            android:paddingTop="@dimen/activity_top_padding"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:weightSum="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textSize="@dimen/font_size"

            android:text="@string/roles" />

        <include layout="@layout/activity_start_divider" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:layout_weight="0.4"
                android:text="@string/villager" />

            <com.woodplantation.werwolf.graphics.MyButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/show" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/werewolf" />

            <com.woodplantation.werwolf.graphics.MyButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/show" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
