<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.woodplantation.werwolf.activities.GameSettingsActivity"
    tools:showIn="@layout/activity_gamesettings">


    <LinearLayout
        android:id="@+id/base_layout_wiki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/settings_count_player"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/settings_players" />


            <com.woodplantation.werwolf.graphics.MyEditText
                android:id="@+id/edit_text_count_players"
                android:background="@drawable/border"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:layout_weight="0.6" />

        </LinearLayout>

        <include layout="@layout/activity_start_divider" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/villager" />


            <com.woodplantation.werwolf.graphics.MyEditText
                android:id="@+id/edit_text_count_villager"
                android:background="@drawable/border"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:layout_weight="0.6" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/settings_werewolf" />


            <com.woodplantation.werwolf.graphics.MyEditText
                android:id="@+id/edit_text_count_werewolf"
                android:background="@drawable/border"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:layout_weight="0.6" />

        </LinearLayout>

        <com.woodplantation.werwolf.graphics.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/settings_role_info" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/oracle" />

            <Switch
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/switch_oracle"
                android:layout_weight="0.4" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/witch" />

            <Switch
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/switch_witch"
                android:layout_weight="0.4" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/hunter" />

            <Switch
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/switch_hunter"
                android:layout_weight="0.4" />
        </LinearLayout>



    </LinearLayout>


</ScrollView>
