<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_wiki"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.woodplantation.werwolf.Wiki.RollenActivity"
    tools:showIn="@layout/activity_rollen">

    <LinearLayout
        android:id="@+id/base_layout_wiki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <com.woodplantation.werwolf.graphics.MyTextView
            android:paddingTop="@dimen/activity_top_padding"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:weightSum="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"

            android:text="@string/roles"
            android:textStyle="normal|bold" />

        <include layout="@layout/activity_start_divider" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:id="@+id/wiki_villager"
            android:onClick="showPopUp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/image_villager"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bauer" />

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="0.4"
                android:text="@string/villager" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:onClick="showPopUp"
            android:id="@+id/wiki_werewolf"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">>

            <ImageView
                android:id="@+id/image_werewolf"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/wolf" />

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/werewolf" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:onClick="showPopUp"
            android:id="@+id/wiki_witch"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">>

            <ImageView
                android:id="@+id/image_witch"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/witch" />

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/witch" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:onClick="showPopUp"
            android:id="@+id/wiki_hunter"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">>

            <ImageView
                android:id="@+id/image_hunter"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/jaeger" />

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/hunter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:onClick="showPopUp"
            android:id="@+id/wiki_oracle"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/image_oracle"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/eye" />

            <com.woodplantation.werwolf.graphics.MyTextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/oracle" />

        </LinearLayout>

        <include layout="@layout/activity_start_divider" />
    </LinearLayout>

</ScrollView>
